@@ -6,13 +6,12 @@ import com.team5.surbee.entity.Survey;
 import com.team5.surbee.entity.constant.QuestionType;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record QuestionDto(
         Integer id,
         String questionText,
         QuestionType questionType,
-        Boolean isRequired,
+        boolean isRequired,
         List<OptionDto> options
 ) {
     public static QuestionDto from(Question question) {
@@ -21,11 +20,13 @@ public record QuestionDto(
                 question.getQuestionText(),
                 question.getQuestionType(),
                 question.getIsRequired(),
-                question.getOptions().stream().map(OptionDto::from).collect(Collectors.toList())
+                question.getOptions().stream().map(OptionDto::from).toList()
         );
     }
 
     public Question toEntity(Survey survey, List<Option> optionEntities) {
-        return Question.of(questionText, questionType, isRequired, survey, optionEntities);
+        boolean hasOptions = questionType == QuestionType.MULTIPLE_CHOICE || questionType == QuestionType.CHECKBOX;
+        List<Option> finalOptions = hasOptions ? optionEntities : List.of();
+        return Question.of(questionText, questionType, isRequired, survey, finalOptions);
     }
 }
